<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterMovie"
    android:background="#64d8fe">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/title_of_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="140dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/the_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="220dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/the_directors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/actors_actress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="380dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="460dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="129dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextDirector"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="209dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextActors"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="289dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextRating"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="369dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="449dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="520dp"
        android:text="@string/save"
        android:onClick="buttonSaveRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>