<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NameActivityPage"
    android:background="#64d8fe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:onClick="getNames"
            android:text="@string/search_movie"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </ScrollView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="displayImage"
        android:text="@string/get_image"
        android:textSize="24sp"
        android:textColor="@color/black"/>

</LinearLayout>