<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsEditPage"
    android:background="#64d8fe">

    <TextView
        android:id="@+id/textViewTitleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/title_of_the_movie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewYearEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="110dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/the_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDirectorEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/the_director"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewListEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/list_of_actors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReviewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="320dp"
        android:text="@string/review"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTitleEdit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextYearEdit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="98dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextDirectorEdit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="169dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextActorsEdit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginLeft="184dp"
        android:layout_marginTop="239dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editTextReviewEdit"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="309dp"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <RatingBar
        android:id="@+id/ratingBarEdit"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="452dp"
        android:isIndicator="false"
        android:numStars="10"
        android:progressTint="#FFFF00"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:stepSize="1"
        tools:layout_edito_absoluteX="162dp"
        tools:layout_edito_absoluteY="206dp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/buttonSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="520dp"
        android:onClick="buttonEditRegister"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="380dp"
        android:buttonTint="@color/black"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textViewAddFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="392dp"
        android:text="@string/favourite"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>